# nestruts

./: .gitignore  instruction_store.h  meson.build  nestruts.sln  readme.md
nestruts/: apu.cpp  apu.h  audio.cpp  audio.h  audio_processing_unit.cpp  audio_processing_unit.h  controller.h  core6502.cpp  core6502.h  gfx.cpp  gfx.h  instruction_store.cpp  log.h  mem.cpp  mem.h  nestruts.cpp  nestruts.vcxproj  nestruts.vcxproj.filters  palette.h  ppu.cpp  ppu.h  rom.cpp  rom.h  stdafx.cpp
nestruts/test/: cpu.cpp
utils/: pal_gen.py
